# crawler

./: .gitignore  Makefile  README.md  pyproject.toml
src/ycrawler/: fetcher.py  main.py  parser.py  storage.py
