[project]
name = "ycrawler"
version = "0.1.0"
description = ""
authors = [
    {name = "aleksei",email = "bscadet@yandex.ru"}
]
readme = "README.md"
packages = [{ include = "ycrawler", from = "src" }]
requires-python = ">=3.13"
dependencies = [
    "aiohttp (>=3.12.9,<4.0.0)",
    "aiofiles (>=24.1.0,<25.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
